...
//  SOFTWARE.

//General
"ok" = "OK";
"error" = "Error";
"cancel" = "Cancel";
"delete" = "Delete";

//Add Card
"scan_card" = "SCAN CARD";
"card_number" = "Card Number";
"cardholder_name" = "Cardholder Name";
"expiry_date" = "MM/YY";
"country" = "Country";
"postal_code" = "Postcode";
"secure_code" = "CVV";
"add_card_button" = "ADD CARD";
"invalid_expiry_date_value" = "Invalid date value entered";
"invalid_postcode" = "Invalid postcode entered";
"invalid_zip_code" = "Invalid ZIP code entered";

//Scan Card
"scan_card_message_title" = "Position card in this frame";
...
"scan_card_simulator_title" = "Camera not available on iOS simulators";
"scan_card_confirm" = "Got it";
"scan_card_go_to_settings" = "Go to Settings";

//Payment Method Screen
"card_subtitle" = "%@ Ending %@";
"no_connected_cards" = "You didn't connect any cards yet";
"connected_cards" = "Connected cards";
"edit_capitalized" = "EDIT";
"done_capitalized" = "DONE";
"pay_now_capitalized" = "PAY NOW";
"choose_payment_method" = "Choose a Payment Method";
"no_cards_added"  = "You didn’t add any cards yet.\nAdd one right now or use any of the payment methods below";
"you_will_pay" = "You will pay";
"card_transaction_unsuccesful_error" = "Card transaction unsuccessful - please try again";
"delete_card_alert_title" = "Delete Card ?";
"delete_card_alert_message" = "Are you sure you want to delete this card from your wallet?";
"expired" = "Expired";
"is_expired" = "is Expired";
"will_expire_soon" = "will expire soon";
"expire_soon" = "expire soon";

//CardInputField
"card_number_label" = "Card number";
"long_card_number" = "Long card number";

//SecurityCodeInputField
"please_reenter_the_card_security_code" = "Re-enter security code";
"security_code" = "Security code";

...
"issue_number_label" = "Issue number";
"issue_number_front_of_card" = "Issue number on front of card";

//DateInputField
"check_expiry_date" = "Check expiry date";
"check_start_date" = "Check start date";
"start_date_label" = "Start date";
"expiry_date_label" = "Expiry date";
"date_hint" = "MM/YY";
"date_format" = "MM/yy";

//PostcodeInputField
"billing_postcode" = "Billing postcode";
"billing_zip_code" = "Billing ZIP code";
...
"ideal_transaction_failed" = "Transaction failed!";
"retry" = "Retry";
"close" = "Close";

//JudoPayViewController
"secure_server" = "Secure server: ";
"pay" = "Pay";
"check_card" = "Check Card";
"add_card" = "Add Card";

//NSError+Additions
"unable_to_process_request_error_desc" = "Sorry, we're currently unable to process this request.";
"unable_to_process_request_error_title" = "Unable to process";
...

//NSString+Card
"check_card_number" = "Check card number";
"error_card_not_supported" = "We do not accept %@";

//JPTheme
"add_card" = "Add card";
"add" = "Add";
"back" = "Back";
"payment" = "Payment";
"refund" = "Refund";
"authentication" = "Authentication";
"adding_card" = "Adding card...";
"processing_payment" = "Processing payment...";
"redirecting" = "Redirecting...";
"verifying_payment" = "Verifying payment";
"verifying_card" = "Verifying card";
"secure_server_transmission" = "Your card details are encrypted using SSL before transmission to our secure payment service provider.";

...
