...
                               title:@"Apple Pay payment"
                             details: @"with a wallet card"],
        [DemoFeature featureWithType:DemoFeatureTypeApplePayPreAuth
                               title:@"Apple Pay preAuth"
                             details: @"with a wallet card"],
        [DemoFeature featureWithType:DemoFeatureTypePaymentMethods
                               title: @"Payment Method"
                             details: @"with default payment methods"],
        [DemoFeature featureWithType:DemoFeatureTypePreAuthMethods
                               title:@"PreAuth Methods"
                             details:@"with default preauth methods"],
        [DemoFeature featureWithType:DemoFeatureTypeServerToServer
                               title:@"Server-to-Server payment methods"
...
