...
    NSString *tvText;
    NSString *tvDetailText;
    
    switch (indexPath.row) {
        case TableViewContentPayment:
            tvText = @"Payment";
            tvDetailText = @"with default settings";
            break;
            
        case TableViewContentPreAuth:
            tvText = @"PreAuth";
            tvDetailText = @"to reserve funds on a card";
            break;
            
        case TableViewContentCreateCardToken:
            tvText = @"Register card";
            tvDetailText = @"to be stored for future transactions";
            break;
            
        case TableViewContentSaveCard:
            tvText = @"Save card";
            tvDetailText = @"to be stored for future transactions";
            break;
            
        case TableViewContentRepeatPayment:
            tvText = @"Token payment";
            tvDetailText = @"with a stored card token";
            break;
            
        case TableViewContentTokenPreAuth:
            tvText = @"Token preAuth";
            tvDetailText = @"with a stored card token";
...
