...
//  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
//  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
//  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
//  SOFTWARE.

//CardInputField
"card_number_label" = "Card number";
"long_card_number" = "Long card number";

//SecurityCodeInputField
"please_reenter_the_card_security_code" = "Re-enter security code";
"security_code" = "Security code";

...
"issue_number_front_of_card" = "Issue number on front of card";

//DateInputField
"check_expiry_date" = "Check expiry date";
"check_start_date" = "Check start date";
"start_date_label" = "Start date";
"expiry_date_label" = "Expiry date";
"date_hint" = "MM/YY";
"date_format" = "MM/yy";

//PostcodeInputField
"billing_postcode" = "Billing postcode";
"billing_zip_code" = "Billing ZIP code";
...
"united_states" = "USA";
"canada" = "Canada";
"other_country" = "Other";

//JudoPayViewController
"secure_server" = "Secure server: ";
"pay" = "Pay";

//JudoPaymentMethodsViewController
"payment_method" = "Payment Method";
"select_payment_method" = "Please select from one of the payment methods listed below:";
"card_payment" = "Card Payment";

...
